[cpp gram]第一个全部添加的测试样例

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,5 +41,6 @@ src/test/grammaticalAnalysierTest.cpp)
 
 target_link_libraries(
     grammaticalAnalysierTest
+    lexicalAnalysier
     grammaticalAnalysier
 )
