[cpp gram]一次减少bug的尝试

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,7 @@ target_link_libraries(
 add_library(
     grammaticalAnalysier
     src/lib/grammaticalAnalysier.cpp
+    src/lib/grammaticalAnalysierMake.cpp
 )
 target_link_libraries(
     grammaticalAnalysier
